Added navbar to all forms, changed registration page designing.

--- a/Aayojakah/appsettings.json
+++ b/Aayojakah/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Data Source=DESKTOP-F8LJ8LM;Initial Catalog=EventDB;Integrated Security=True;Pooling=False"
+    "DatabaseConnection": "Data Source=DESKTOP-10F855L\\ANAND_SQL;Initial Catalog=EventDB;Integrated Security=True;Pooling=False"
   }
 }
