--- a/Aayojakah/Aayojakah.csproj
+++ b/Aayojakah/Aayojakah.csproj
@@ -173,6 +173,15 @@
     <None Include="wwwroot\RegistrationAssets\scss\bootstrap\_utilities.scss" />
     <None Include="wwwroot\RegistrationAssets\scss\bootstrap\_variables.scss" />
     <None Include="wwwroot\RegistrationAssets\scss\style.scss" />
+    <None Include="wwwroot\src\chart.js" />
+    <None Include="wwwroot\src\graph.js" />
+    <None Include="wwwroot\src\jquery-3.3.1.min.js" />
+    <None Include="wwwroot\webfonts\fa-brands-400.svg" />
+    <None Include="wwwroot\webfonts\fa-brands-400.woff2" />
+    <None Include="wwwroot\webfonts\fa-regular-400.svg" />
+    <None Include="wwwroot\webfonts\fa-regular-400.woff2" />
+    <None Include="wwwroot\webfonts\fa-solid-900.svg" />
+    <None Include="wwwroot\webfonts\fa-solid-900.woff2" />
   </ItemGroup>
 
   <ItemGroup>
